deployment/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: www-zhangkong365-com
  name: www-zhangkong365-com
  namespace: production
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: www-zhangkong365-com
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: www-zhangkong365-com
    spec:
      containers:
        - image: >-
            registry-vpc.cn-shanghai.aliyuncs.com/thingworks/www-zhangkong365-com:$BUILD_NUMBER
          imagePullPolicy: Always
          name: www-zhangkong365-com
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 20Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
